# pixie-repo

./: .editorconfig  .env.example  .eslintrc.json  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VISION.md  package.json  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  deployment.md  faq.md  quickstart.md  roadmap.md  troubleshooting.md
examples/: advanced-swaps.ts  basic-usage.ts  cli-bot.ts
scripts/: setup.sh
src/: client.ts  index.ts
src/core/: nlp-parser.ts  rate-limiter.ts  transaction-builder.ts  wallet-manager.ts
src/integrations/: jito.ts  jupiter.ts
src/rust/: lib.rs
src/security/: risk-analyzer.ts
src/types/: errors.ts  nlp.ts  wallet.ts
src/utils/: cache.ts  constants.ts  formatting.ts  logger.ts  metrics.ts  retry.ts  validation.ts
tests/: integration.test.ts  nlp-parser.test.ts  security.test.ts  validation.test.ts  wallet-manager.test.ts
